--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.4.0",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
