--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,8 @@
     "bootstrap-vue": "^2.4.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
