--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.10.4",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
