--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.4.0",
     "core-js": "^3.4.4",
+    "dotenv": "^8.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vue-the-mask": "^0.11.1"
@@ -43,5 +44,8 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "jshintConfig": {
+    "esversion": 6
+  }
 }
