-New tests in backend, for PatientsService, with jest; -Uninstal of cypress in backend and move it to root folder; -changes in docker-compose to equalize the ports in localmachine and docker; -including cypress in dokcer-compose to try a test inside a container; -changes in backend service layer to be more testable; -bug fixes; -change in frontend to adjust menu to turn hamburguer in mobile. -excluding consults history area from patients details.

--- a/Backend/dockerfile
+++ b/Backend/dockerfile
@@ -14,6 +14,7 @@ ENV DB_POOL_ACQUIRE=30000
 ENV DB_POOL_IDLE=10000
 
 ENV APP_PORT=8082
+ENV CORS_ORIGIN_PORT=8080
 
 
 COPY package.json /code/package.json
